# flex-power-engineering-challenge

./: .dockerignore  .env.airflow.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cli/: pnl_report.py
dags/: pnl_report_dag.py  trade_report_dag.py
data/20240201/: epex_trades_20240201.csv
data/20240202/: epex_trades_20240202.csv
data/20240203/: epex_trades_20240203.csv
flexpower/: auth.py  config.py  db.py  main.py
flexpower/api/: health.py  trade.py
flexpower/models/: trade.py
include/: upsert_daily_pnl_report.sql
tests/: conftest.py  test_health.py  test_trade.py
