[tool.poetry]
name = "flexpower"
version = "0.1.0"
description = "Flex Power Engineering Challenge"
authors = ["Rodrigo V. Del Monte <rvdelmonte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.prod.dependencies]
pydantic-settings = "^2.1.0"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
fastapi = "^0.109.0"
sqlmodel = "^0.0.14"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pydantic-settings = "^2.1.0"
taskipy = "^1.12.2"
isort = "^5.13.2"
black = "^24.1.1"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
fastapi = "^0.109.0"
httpx = "^0.26.0"
sqlmodel = "^0.0.14"
psycopg2-binary = "^2.9.9"
typer = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line_length = 99

[tool.taskipy.tasks]
run = "docker-compose up --build --force-recreate"
clean = "docker-compose rm -f -s -v"
lint = "black --check --diff . && isort --check --diff ."
test = "pytest -s -x --cov=flexpower/ -vv -W ignore"
post_test = "coverage html"
open_test_cov = "open htmlcov/index.html"
airflow_init = "mkdir -p ./dags ./logs ./plugins ./config && docker-compose up airflow-init"